--- a/css/style.css
+++ b/css/style.css
@@ -198,15 +198,249 @@ table { border-collapse: collapse; border-spacing: 0; }
 
 /* =============================================================================
    Primary styles
-   Author: 
+   Author: Hain-Lee Hsueh
    ========================================================================== */
+/* This is the selector of the fourth box, here's where we establish the measures, background colors, borders and shadows */
+.cardshadow{
+    /*margin: 50px;*/
+/*    min-height: 100px;
+    width: 300px;*/
+    padding: 5px 0 ;
+    position:relative;
+    background: #fff;
+    background: -webkit-gradient(linear, 0% 20%, 0% 100%, from(#fff), to(#fff), color-stop(.2, #f2f2f2));
+    background: -moz-linear-gradient(0% 0% 360deg, #fff, #f2f2f2 20%, #fff );
+    border: 1px solid #ccc;
+    -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
+}
+ 
+/* This is the top right shadow*/
+.cardshadow:before{
+    content: '';
+    width: 50px;
+    height: 50px;
+    top:0; right:0;
+    position:absolute;
+    z-index: -1;
+    -webkit-box-shadow: 10px -10px 8px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 10px -10px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 10px -10px 8px rgba(0, 0, 0, 0.2);
+    -webkit-transform: rotate(2deg)
+                        translate(-14px,20px)
+                        skew(-20deg);
+    -moz-transform: rotate(2deg)
+                        translate(-14px,20px)
+                        skew(-20deg);
+        -o-transform: rotate(2deg)
+                        translate(-14px,20px)
+                        skew(-20deg);
+                transform: rotate(2deg)
+                        translate(-14px,20px)
+                        skew(-20deg);
+}
+ 
+/* This is the top left shadow*/
+.cardshadow:after{
+    content: '';
+    width: 50px;
+    height: 50px;
+    top:0; left:0;
+    position:absolute;
+    z-index:-1;
+    display: inline-block;
+    -webkit-box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.2);
+    -webkit-transform: rotate(2deg)
+                        translate(12px,25px)
+                        skew(20deg);
+    -moz-transform: rotate(2deg)
+                        translate(12px,25px)
+                        skew(20deg);
+    -o-transform: rotate(2deg)
+                        translate(12px,25px)
+                        skew(20deg);
+    transform: rotate(2deg)
+                        translate(12px,25px)
+                        skew(20deg);
+}
+ 
+/* This is the bottom right shadow */
+.shr_cardshadow{
+    width: 100px;
+    height: 100px;
+    bottom:0; right:0;
+    position:absolute;
+    z-index: -1;
+    -webkit-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+    -webkit-transform: rotate(0deg)
+                        translate(-20px,-15px)
+                       skew(20deg);
+    -moz-transform: rotate(0deg)
+                        translate(-20px,-15px)
+                       skew(20deg);
+    -o-transform: rotate(0deg)
+                        translate(-20px,-15px)
+                       skew(20deg);
+        transform: rotate(0deg)
+                        translate(-20px,-15px)
+                       skew(20deg);
+}
+ 
+/* This is the bottom left shadow */
+.shl_cardshadow{
+    content: '';
+    width: 100px;
+    height: 100px;
+    bottom:0; left:0;
+    position:absolute;
+    z-index: -1;
+    -webkit-box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: -10px 10px 10px rgba(0, 0, 0, 0.2);
+    -webkit-transform: rotate(0deg)
+                        translate(20px,-15px)
+                       skew(-20deg);
+    -moz-transform: rotate(0deg)
+                        translate(20px,-15px)
+                       skew(-20deg);
+    -o-transform: rotate(0deg)
+                        translate(20px,-15px)
+                       skew(-20deg);
+    transform: rotate(0deg)
+                        translate(20px,-15px)
+                       skew(-20deg);
+}
 
+body {
+  background: url('../images/webtreats_wood-pattern1-beige.jpg') fixed;
+  margin:0 auto;
+  margin-left:250px;
+  width: 960px;
 
+}
 
+#container {
+  border: 0;
+  border-left: 1px solid #8c7867;
+  box-shadow:-1px 0px 5px 1px #8c7867;
+  background: url('../images/webtreats_wood-pattern1-beige.jpg');
+  padding:25px;
+}
 
+.section {
+  height:779px;
+  background-color: rgba(0,0,0,0.2);
+  background:url('../images/eggshell.jpg');
+  padding:20px;
+  margin-bottom:20px;
+}
 
+#main p {
+  font:18px/26px Helvetica, Helvetica Neue, Arial;
+}
 
+#section-0 {
+  padding: 50px;
+  font-size:200%;
+  background:none;
+  color: #8c7867;
+  text-shadow:0px 1px 0px rgba(255,255,255,.3), 0px -1px 0px rgba(61, 49, 38, 0.8);
+}
 
+#section-0 h1, #section-0 h2 {
+  opacity:0.75;
+  font-size:350%;
+  margin:0;
+}
+#section-0 h2 {
+  font-weight:normal;
+  font-size:200%;
+  font-family:Times;
+  letter-spacing:15px;
+  margin-top:-20px;
+}
+
+#section-0 p {
+}
+
+nav#side-nav {
+  width: 150px;
+  left:50px;
+  top:100px;
+  position:fixed;
+
+}
+nav#side-nav ul li {
+  background: url('../images/webtreats_wood-pattern1-beige.jpg');
+  box-shadow:inset 0px 0px 2px 2px #8c7867;
+  text-align:center;
+  border-radius:5px;
+  /*display: inline-block;*/
+  margin:40px 0;
+
+  /* transitions */
+  transition:all 0.3s ease-in-out;
+  -moz-transition:all 0.3s ease-in-out; /* Firefox 4 */
+  -webkit-transition:all 0.3s ease-in-out; /* Safari and Chrome */
+  -o-transition:all 0.3s ease-in-out; /* Opera */
+}
+nav#side-nav ul li:hover {
+/*  transform:scale(1.2);
+  -moz-transform:scale(1.2);
+  -webkit-transform:scale(1.2);
+  -o-transform:scale(1.2);*/
+  box-shadow: 0 0px 5px 2px #51453a;
+  cursor:pointer;
+}
+
+nav#side-nav ul li a, nav#side-nav ul li a:link, nav#side-nav ul li a:visited {
+  display:block;
+  padding:30px;
+  margin: 0 auto;
+
+  text-align:center;
+  text-decoration:none;
+  color:#51453a;
+  font-size:18px;
+  text-shadow:0px 1px 0px rgba(255,255,255,.3), 0px -1px 0px rgba(61, 49, 38, 0.8);
+  opacity:0.75;
+}
+
+nav#side-nav #topLink {
+  display:none;
+  background: url('../images/ui.totop.png') no-repeat center;
+  box-shadow:none;
+}
+ul#cards {
+  padding:0;
+}
+ul#cards li {
+  display:inline-block;
+  width:200px;
+  margin-right:20px;
+  margin-top:20px;
+  background: rgb(53,106,160); /* Old browsers */
+background: -moz-linear-gradient(top, rgba(53,106,160,1) 0%, rgba(53,106,160,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(53,106,160,1)), color-stop(100%,rgba(53,106,160,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* IE10+ */
+background: linear-gradient(top, rgba(53,106,160,1) 0%,rgba(53,106,160,1) 100%); /* W3C */
+}
+ul#cards li a {
+  display:block;
+  text-align:center;
+  padding:50px 20px;
+}
+ul#cards li a:link, ul#cards li a:visited, ul#cards li a:active {
+  color:white;
+  text-decoration:none;
+}
 
 /* =============================================================================
    Non-semantic helper classes
